--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ a:hover {
 }
 
 .container{
-    width: 600px;
-    font-size: 15px;
+    width: 680px;
+    font-size: 16px;
     margin: 0 auto;
     vertical-align: middle;
     text-align: left;
@@ -51,7 +51,7 @@ name {
 }
 
 .sections {
-  overflow: hidden;
+  /*overflow: hidden;*/
   padding-left: 0em;
   padding-right: 0em;
   margin-top: 1em;
