--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: #000;
-    font-family: 'Quattrocento', serif;
+    font-family: "Georgia",Times,Times New Roman,serif;
     font-weight: normal;
     background-color: #fff;
 }
@@ -8,7 +8,7 @@ body {
 input:focus {outline:none !important;}
   
 a {
-  color:#003399;
+  /*color:#003399;*/
   text-decoration:none;
   transition: color .2s ease;
 }
