--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: #000;
-    font-family: "Georgia",Times,Times New Roman,serif;
+    font-family: "Arial",Verdana,sans-serif;
     font-weight: normal;
     background-color: #fff;
 }
@@ -8,7 +8,7 @@ body {
 input:focus {outline:none !important;}
   
 a {
-  /*color:#003399;*/
+  color:#07C;
   text-decoration:none;
   transition: color .2s ease;
 }
@@ -18,8 +18,8 @@ a:hover {
 }
 
 .container{
-    width: 680px;
-    font-size: 16px;
+    width: 600px;
+    font-size: 13px;
     margin: 0 auto;
     vertical-align: middle;
     text-align: left;
@@ -30,7 +30,7 @@ a:hover {
 }
   
 name {
-    font-size: 2em;
+    font-size: 1.6em;
     line-height:1em;
 }
   
